<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>fr.ght1pc9kc</groupId>
    <artifactId>baywatch</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>baywatch</name>
    <packaging>pom</packaging>

    <modules>
        <module>seaside</module>
        <module>sandside</module>
    </modules>

    <properties>
        <java.version>11</java.version>

        <db.driver>org.h2.Driver</db.driver>
        <db.url>jdbc:h2:file:${project.basedir}/target/jooq_baywatch</db.url>
        <db.username>security</db.username>
        <db.password>security</db.password>

        <noexception.version>1.6.2</noexception.version>
        <findbugs.version>3.0.2</findbugs.version>
        <jetbrains.version>20.1.0</jetbrains.version>
        <wiremock.version>2.27.2</wiremock.version>
        <testy-box.version>1.3.1</testy-box.version>
    </properties>

</project>
